--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react": "^16.0.36",
     "apollo-client": "^2.2.1",
     "apollo-client-preset": "^1.0.6",
     "apollo-link-http": "^1.3.2",
+    "fuse.js": "^3.2.0",
     "graphql": "^0.12.3",
     "graphql-tag": "^2.6.1",
+    "moment": "^2.20.1",
     "react": "^16.2.0",
     "react-apollo": "^2.0.4",
     "react-dom": "^16.2.0",
