--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-apollo": "^2.0.4",
     "react-dom": "^16.2.0",
     "react-maskedinput": "^4.0.1",
+    "react-popover": "^0.5.4",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.0"
   },
